[metadata]
name = facilyst
version = 0.0.2
author = Parthiv Naresh
author_email = pnaresh.github@gmail.com
license = MIT License
description = Make data analysis and machine learning tools more easily accessible.
keywords = python, machine learning, data science
url = https://github.com/Parthiv-Naresh/facilyst
long_description = file: README.md
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: MIT License
project_urls =
    Source Code = https://github.com/Parthiv-Naresh/facilyst

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    numpy>=1.21.0
    pandas>=1.4.0
    scipy==1.8.0
    scikit-learn>=0.24.0
    requirements-parser>=0.2.0
    statsmodels>=0.12.2
    matplotlib>=3.3.3
    seaborn>=0.11.1
    plotly>=5.0.0
    graphviz>=0.13
    sktime>=0.7.0
    click>=7.1.2
    woodwork>=0.15.0
    faker>=13.3.4
    hyperopt>=0.2.7
    hpsklearn>=0.1.0
    catboost>=1.0.5
    xgboost>=1.5.2
    torch==1.11.0
    transformers==4.14.1
    sentencepiece==0.1.95
    keras==2.8.0
    Keras-Preprocessing==1.1.2

python_requires = >=3.7, <4

[options.extras_require]
dev =
    %(test)s
    flake8==4.0.1
    black==22.3.0
    isort==5.0.0
    pydocstyle==6.1.1
    darglint==1.8.0
    toml==0.10.2
    pytype==2022.4.22

test =
    wheel>=0.33.1
    setuptools>=50.0.1
    pytest>=7.1.1
    pytest-xdist>=2.5.0
    pytest-timeout>=2.1.0
    pytest-cov>=3.0.0
    nbval==0.9.3
    IPython>=7.16.3
    codecov==2.1.11
    PyYAML==5.4

[options.package_data]
* =
    *.txt
    LICENSE
    README.md

[options.exclude_package_data]
* =
    * __pycache__
    *.py[co]

[aliases]
test=pytest

[tool:pytest]
addopts = --doctest-modules
python_files = facilyst/tests/*
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[isort]
profile=black
skip=__init__.py
multi_line_output=3
forced_separate=facilyst
known_first_party=facilyst

[pytype]
inputs = facilyst
exclude = facilyst/tests